<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/one_page_background"
    tools:context=".ui.diary.DiaryWritingPageActivity">

    <ImageView
        android:id="@+id/diarySavedImageView"
        android:layout_width="149dp"
        android:layout_height="78dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="93dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:src="@drawable/notice_insert_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="151dp"
        android:layout_height="60dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="178dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diary_title_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/diaryTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/default_diary_title"
                android:textColor="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diary_date_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/diaryDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/default_diary_date"
                android:textColor="@color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/feelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diary_feel_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/diaryFeelTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/default_diary_feel"
                android:textColor="@color/black" />


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/diaryTextView"
        android:layout_width="155dp"
        android:layout_height="71dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="18dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:text="일기에 적어둔 내용"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
