<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_schedule_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/calendar_title"
        android:fontFamily="@font/nanumleo_bold"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/todo_list_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/todo_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/calendar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_schedule_title" />

    <TextView
        android:id="@+id/todo_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/calendar_bottom"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/todo_today_placeholder"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todo_calendar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/todo_btn_write"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="ture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todo_today"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/todo_btn_write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo_today_contentDescription_floating_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />
</androidx.constraintlayout.widget.ConstraintLayout>
